# exploring-cmake

./: .gitignore  README.md
01-simple/: CMakeLists.txt  myApp.cpp  myLib.cpp
02-fetch-gtest/: CMakeLists.txt
02-fetch-gtest/tests/: CMakeLists.txt
03-cmake-vcpkg/: CMakeLists.txt  build-cmake-vcpkg.bat  vcpkg.json
03-cmake-vcpkg/mylib/: CMakeLists.txt
03-cmake-vcpkg/mylib/main/: myLib.hpp
03-cmake-vcpkg/src/: CMakeLists.txt
03-cmake-vcpkg/src/main/: myApp.cpp
03-cmake-vcpkg/tests/: CMakeLists.txt  mylib_test_main.cpp
